--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background: var(--bg, #ccc);
+      background: #999;
     }
     svg {
       width: 300px;
